--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,33 @@
 name: CI
-on: push
+on:
+  push:
+    branches:
+    - "main"
 jobs:
   deploy:
+    name: Deploy website
     runs-on: ubuntu-latest
     steps:
-        - name: Git checkout
-          uses: actions/checkout@v2
+    - name: Git checkout
+      uses: actions/checkout@v2
 
-        - name: Setup Hugo
-          uses: peaceiris/actions-hugo@v2
-          with:
-              hugo-version: 'latest'
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2
+      with:
+      hugo-version: 'latest'
 
-        - name: Clean public directory
-          run: rm -rf ./public
+    - name: Clean public directory
+      run: rm -rf ./public
 
-        - name: Build
-          run: hugo -D
+    - name: Build
+      run: hugo -D
 
-        - name: Create cname file
-          run: echo 'ipopov.dev' > public/CNAME
-
-        - name: Deploy
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-              github_token: ${{ secrets.TOKEN }}
-              publish_dir: ./public
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      if: ${{ github.ref == 'refs/heads/main' }}
+      with:
+      github_token: ${{ secrets.GH_TOKEN }}
+      publish_dir: ./public
+      cname: ipopov.dev
 
 
