--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://ipopov.dev/
 languageCode: en-us
-title: My New Hugo Site Lol 
+title: Igor Popov 
 theme: PaperMod
