--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ params:
   profileMode:
     enabled: true
     title: "Igor Popov" 
-    subtitle: "iOS Development"
+    subtitle: "iOS Application Development Services & Consulting"
     imageUrl: "images/1.jpg"
     imageTitle: "<title of image as alt>" # optional
     imageWidth: 140 # custom size
