--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: rm -rf ./public
 
       - name: Build
-        run: hugo -D
+        run: hugo
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
